--- a/ExtraCredit/tex/ec.tex
+++ b/ExtraCredit/tex/ec.tex
@@ -1,5 +1,10 @@
 % IEEEAerospace2012.cls requires the following packages: times, rawfonts, oldfont, geometry
-\documentclass[twocolumn,letterpaper]{article}  % only supports two-column, letterpaper format
+\documentclass{article}
+% \documentclass[onecolumn,legalpaper]{article}  % only supports two-column, letterpaper format
+\usepackage[top=1in, bottom=1.25in, left=1.25in, right=1.25in]{geometry}
+\usepackage{floatrow}
+% Table float box with bottom caption, box width adjusted to content
+\newfloatcommand{capbtabbox}{table}[][\FBwidth]
 
 \usepackage{booktabs}
 \usepackage[]{graphicx,latexsym,amssymb,amsfonts,amsmath,amstext,times}
@@ -59,41 +64,40 @@
 \usepackage{epigraph}
 \renewcommand{\textflush}{flushepinormal}
 
+\usepackage{titling}
 \begin{document}
 
 \title{RPG Dice Simulator}
-\author{%
-John Karasinski\\
-karasinski@gmail.com
-}
+\author{John Karasinski}
 \date{}
 
+\setlength{\droptitle}{-5em}   % This is your set screw
 \maketitle
 
 \thispagestyle{plain}
 \pagestyle{plain}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Introduction}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\vspace{-1.5cm}
 \epigraph{\small\itshape God's dice always have a lucky roll.}{Sophocles (497/6 --- 406/5 BC)}%
 \vspace{-2em}
 \epigraph{\small\itshape God does not play dice.}{Albert Einstein (1879 --- 1955)}%
 \vspace{-2em}
 \epigraph{\small\itshape God not only plays dice, but also sometimes throws them where they cannot be seen.}{Stephen Hawking (1942 --- \hspace{1.5em})}%
 
+\vspace{-1.0cm}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Introduction}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 God's use of dice may be disputed, but archaeological evidence shows that humans have been using dice for many thousands of years~\cite{history}. Dice are often used to insert randomness into games of chance, which can lead to wonderfully unpredictable situations. Due to the randomness associated with them, dice are also excellent for bringing everyone to the same level. A king and a peasant have the same odds when rolling a die, and the die does not care who is more wealthy, talented, or desperate. While the result of any individual roll of the die may be random and unpredictable, a basic application of statistics can lead us to make more informed decisions about the likelihood of events.
-
-The only assumption going forward is that we are considering perfect dice. Perfect dice have an equal probability of landing on each face. According to standard die notation, die rolls are given in the form AdX. A and X are variables, separated by the letter d, which stands for die or dice~\cite{dice_notation}. A represents the number of dice, and X represents the number of faces on each die. For example, 1d20 represents one twenty-sided die, and 2d10 represents two ten-sided die. A six-sided die (1d6), for example, would then have a $1/6$ probability of resulting in a 1, 2, 3, 4, 5 or 6. Cheap dice purchased for gaming will not have this property, and will instead slightly favor different outcomes.
-
-As we do not want to spend time throwing dice, we will instead use software to simulate the results of their throws. For the purposes of the simulations here, you can pretend that we have purchased \textit{very, very expensive} dice which behave perfectly. The joy of the software used for this project though, is that it is all 100\% open source and free.
 
 The project outline states: ``Create a function that will allow me to specify the number of dice I want to use per roll, the number of faces on each die (assume all dice used in a roll have the same number of faces), whether I will sum the scores of each die or will have a minimum value needed to count as a success per die, and whether I will include botches or not as an outcome for rolls.'' Several additional statistics were requested to describe the nature of the outcome of 1,000 repetitions of various dice rolls.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Simulation Method}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+The primary assumption going forward is that we are considering perfect dice. Perfect dice have an equal probability of landing on each face. According to standard die notation, die rolls are given in the form AdX. A and X are variables, separated by the letter d, which stands for die or dice~\cite{dice_notation}. A represents the number of dice, and X represents the number of faces on each die. For example, 1d20 represents one twenty-sided die, and 2d10 represents two ten-sided die. A six-sided die (1d6), for example, would then have a $1/6$ probability of resulting in a 1, 2, 3, 4, 5 or 6. Cheap dice purchased for gaming will not have this property, and will instead slightly favor different outcomes.
+
+As we do not want to spend time throwing dice, we will instead use software to simulate the results of their throws. For the purposes of the simulations here, you can pretend that we have purchased \textit{very, very expensive} dice which behave perfectly. The joy of the software used for this project though, is that it is all 100\% open source and free.
 
 This simulation will make use of Python 3.5.0 and NumPy 1.10.1. The core idea behind the simulation is to generate pseudorandom numbers to simulate the throwing of dice. The rules given in the project outline (summing, botching) can then be applied to deduce the result of the simulated dice throw.
 
@@ -116,7 +120,7 @@ The script for this project, \texttt{dice.py}, accomplishes all of the scenarios
 \item ``Roll 4d10 where I need to roll 5s or greater such that each roll of 5 or greater counts as a success.''
 \item ``The same scenario as above, but now each 1 rolled detracts from the number of successes.''
 \end{enumerate}
-\noindent can be accomplished by running the following code:
+\noindent These can be accomplished by running the following code:
 \begin{lstlisting}
 throw('1d6')
 # 2
@@ -127,83 +131,140 @@ throw('4d10', success_min=5)
 throw('4d10', success_min=5, botching=True)
 # 1
 \end{lstlisting}
-
-The second set of four scenarios was to plot and table several statistics from various dice roll scenarios. $\chi^2$ tests were used to compare the expected value counts to the observed value counts. These exact probabilities were used along with $\chi^2$ tests to statistically confirm that the values from my simulation are the same at the 5\% level of significance. $H_0$ is that the distribution of our results from simulated dice rolls is equivalent to the distribution of the results from the exact probabilities. $H_1$ is simply that $H_0$ is false. The results of each scenario are shown below.
+The second set of four scenarios was to plot and table several statistics from various dice roll scenarios. $\chi^2$ tests were used to compare the expected value counts to the observed value counts. These exact probabilities were used along with $\chi^2$ tests to statistically confirm that the values from this simulation are the same at the 5\% level of significance. $H_0$ is that the distribution of our results from simulated dice rolls is equivalent to the distribution of the results from the exact probabilities. $H_1$ is simply that $H_0$ is false. Four individual tests were run to confirm that the simulation's outcomes are the same as those expected from the calculated exact outcomes. These four results are combined using Fisher's method to determine if $H_0$ is true. The results of each scenario are shown below.
 
 \subsection{Roll 1d6 1,000 times, frequency of each outcome?}
-This is a very basic scenario. As we are just rolling a single die, we should expect a flat distribution of all the possible outcomes (1-6). The exact probability of each outcome is $1/6 \approx 16.67\%$. The observed dice rolls showed no statistical difference from the exact probability distribution $[\chi^2 (1,N=1000)=6.60, p=0.25]$.
+This is a very basic scenario. As we are just rolling a single die, we should expect a flat distribution of all the possible outcomes (1-6). The exact probability of each outcome is $1/6 \approx 16.67\%$. The observed dice rolls showed no statistical difference from the exact probability distribution $[\chi^2=6.60, p=0.25]$.
 
 The command to run this scenario is:
 \begin{lstlisting}
 throw('1d6', n=1000, plot=True, stats=True)
 \end{lstlisting}
+
 \begin{figure}[H]
-\centering
-\includegraphics[width=3.25in]{1d6.pdf}
-\caption{Results from 1,000 1d6 rolls.}
-% \label{fig:on}
+\begin{floatrow}
+\includegraphics[width=4in]{1d6.pdf}
+{%
+  % \caption{A figure}%
+}
+\capbtabbox{%
+  \begin{tabular}{*{3}{r}}
+\toprule
+Value & Observed & Expected \\
+\midrule
+     1 &   162 & 166.67 \\
+     2 &   146 & 166.67 \\
+     3 &   166 & 166.67 \\
+     4 &   169 & 166.67 \\
+     5 &   192 & 166.67 \\
+     6 &   165 & 166.67 \\
+\bottomrule
+  \end{tabular}
+}{%
+  % \caption{A table}%
+}
+\end{floatrow}
+\caption{Results of 1,000 1d6 rolls.  Observed results are compared to expected results from exact probabilities.}
 \end{figure}
 
-\begin{table}[H]
-\begin{center}
-\begin{tabular}{*{3}{r}}
-\toprule
-Value & Count & Frequency \\
-\midrule
-     1 &   162 &      16.2 \\
-     2 &   146 &      14.6 \\
-     3 &   166 &      16.6 \\
-     4 &   169 &      16.9 \\
-     5 &   192 &      19.2 \\
-     6 &   165 &      16.5 \\
-\bottomrule
-\end{tabular}
-\end{center}
-\caption{Results of 1,000 1d6 rolls}
-\end{table}
+% \begin{figure}[H]
+% \centering
+% \includegraphics[width=3.25in]{1d6.pdf}
+% \caption{Results from 1,000 1d6 rolls.}
+% % \label{fig:on}
+% \end{figure}
+
+% \begin{table}[H]
+% \begin{center}
+% \begin{tabular}{*{3}{r}}
+% \toprule
+% Value & Observed & Expected \\
+% \midrule
+%      1 &   162 & 166.67 \\
+%      2 &   146 & 166.67 \\
+%      3 &   166 & 166.67 \\
+%      4 &   169 & 166.67 \\
+%      5 &   192 & 166.67 \\
+%      6 &   165 & 166.67 \\
+% \bottomrule
+% \end{tabular}
+% \end{center}
+% \caption{Results of 1,000 1d6 rolls.  Observed results are compared to expected results from exact probabilities.}
+% \end{table}
 
 \subsection{Roll 2d6 1,000 times, frequency of each outcome? Use the summed scores of each die as your outcome.}
-This is a slightly more interesting scenario. As we are rolling a two die, we should expect a triangle distribution centered around the most likely combination, 7, and ranging all the possible values (2-12). We can calculate each possible outcome and the probability of each. The observed dice rolls showed no statistical difference from the exact probability distribution $[\chi^2 (1,N=1000)=14.31, p=0.16]$.
+This is a slightly more interesting scenario. As we are rolling a two die, we should expect a triangle distribution centered around the most likely combination, 7, and ranging all the possible values (2-12). We can calculate each possible outcome and the probability of each. The observed dice rolls showed no statistical difference from the exact probability distribution, with some minor variation due to the low \texttt{n} $[\chi^2=14.31, p=0.16]$.
 
-This is indeed what we see, with some minor variation due to the low \texttt{n}. The command to run this scenario is:
+The command to run this scenario is:
 
 \begin{lstlisting}
 throw('2d6', n=1000, plot=True, stats=True)
 \end{lstlisting}
 
 \begin{figure}[H]
-\centering
-\includegraphics[width=3.25in]{2d6.pdf}
-\caption{Results of summed values from 1,000 2d6 rolls.}
-% \label{fig:on}
+\begin{floatrow}
+\includegraphics[width=4in]{2d6.pdf}
+{%
+  % \caption{A figure}%
+}
+\capbtabbox{%
+  \begin{tabular}{*{3}{r}}
+\toprule
+Value & Observed & Expected \\
+\midrule
+     2 &    28 &  27.7  \\
+     3 &    57 &  55.5  \\
+     4 &    94 &  83.3  \\
+     5 &   123 & 111.1  \\
+     6 &   139 & 138.8  \\
+     7 &   153 & 166.6  \\
+     8 &   107 & 138.8  \\
+     9 &   129 & 111.1  \\
+    10 &    88 &  83.3  \\
+    11 &    54 &  55.5  \\
+    12 &    28 &  27.7  \\
+\bottomrule
+  \end{tabular}
+}{%
+  % \caption{A table}%
+}
+\end{floatrow}
+\caption{Results of summed values from 1,000 2d6 rolls. Observed results are compared to expected results from exact probabilities.}
 \end{figure}
 
-\begin{table}[H]
-\begin{center}
-\begin{tabular}{*{3}{r}}
-\toprule
-Value & Count & Frequency \\
-\midrule
-     2 &    28 &       2.8 \\
-     3 &    57 &       5.7 \\
-     4 &    94 &       9.4 \\
-     5 &   123 &      12.3 \\
-     6 &   139 &      13.9 \\
-     7 &   153 &      15.3 \\
-     8 &   107 &      10.7 \\
-     9 &   129 &      12.9 \\
-    10 &    88 &       8.8 \\
-    11 &    54 &       5.4 \\
-    12 &    28 &       2.8 \\
-\bottomrule
-\end{tabular}
-\end{center}
-\caption{Results of summed values from 1,000 2d6 rolls.}
-\end{table}
+% \begin{figure}[H]
+% \centering
+% \includegraphics[width=3.25in]{2d6.pdf}
+% \caption{Results of summed values from 1,000 2d6 rolls.}
+% % \label{fig:on}
+% \end{figure}
+
+% \begin{table}[H]
+% \begin{center}
+% \begin{tabular}{*{3}{r}}
+% \toprule
+% Value & Observed & Expected \\
+% \midrule
+%      2 &    28 &  27.7  \\
+%      3 &    57 &  55.5  \\
+%      4 &    94 &  83.3  \\
+%      5 &   123 & 111.1  \\
+%      6 &   139 & 138.8  \\
+%      7 &   153 & 166.6  \\
+%      8 &   107 & 138.8  \\
+%      9 &   129 & 111.1  \\
+%     10 &    88 &  83.3  \\
+%     11 &    54 &  55.5  \\
+%     12 &    28 &  27.7  \\
+% \bottomrule
+% \end{tabular}
+% \end{center}
+% \caption{Results of summed values from 1,000 2d6 rolls. Observed results are compared to expected results from exact probabilities.}
+% \end{table}
 
 \subsection{Roll 6d10 1,000 times, frequency of each outcome? Treat a score of 6 or better as a success and scores less than 6 as nothing, the outcome is total number of successes (include the frequency of no successes).}
 
-Now we no longer care about the exact outcome of each die, we only care whether or not it is greater than or equal to 6. For a 10 sided die, exactly half of the possible outcomes are counted as successes. We can calculate each possible outcome to generate the exact probabilities. The observed dice rolls showed no statistical difference from the exact probability distribution $[\chi^2 (1,N=1000)=3.26, p=0.78]$.
+Now we no longer care about the exact outcome of each die, we only care whether or not it is greater than or equal to 6. For a 10 sided die, exactly half of the possible outcomes are counted as successes. We can calculate each possible outcome to generate the exact probabilities. The observed dice rolls showed no statistical difference from the exact probability distribution $[\chi^2=3.26, p=0.78]$.
 
 The following line calculates the statistics for this scenario:
 \begin{lstlisting}
@@ -211,69 +272,138 @@ throw('6d10', n=1000, success_min=6, plot=True, stats=True)
 \end{lstlisting}
 
 \begin{figure}[H]
-\centering
-\includegraphics[width=3.25in]{6d10_min6.pdf}
-\caption{Results of succeses from 1,000 6d10 rolls, where scores of 6 or greater are considered successes.}
-% \label{fig:on}
+\begin{floatrow}
+\includegraphics[width=4in]{6d10_min6.pdf}
+{%
+  % \caption{A figure}%
+}
+\capbtabbox{%
+  \begin{tabular}{*{3}{r}}
+\toprule
+Value & Observed & Expected \\
+\midrule
+     0 &    12 &  15.6 \\
+     1 &   100 &  93.7 \\
+     2 &   227 & 234.3 \\
+     3 &   303 & 312.5 \\
+     4 &   243 & 234.3 \\
+     5 &   102 &  93.7 \\
+     6 &    13 &  15.6 \\
+\bottomrule
+  \end{tabular}
+}{%
+  % \caption{A table}%
+}
+\end{floatrow}
+\caption{Results of successes from 1,000 6d10 rolls, where scores of 6 or greater are considered successes. Observed results are compared to expected results from exact probabilities.}
 \end{figure}
 
-\begin{table}[H]
-\begin{center}
-\begin{tabular}{*{3}{r}}
-\toprule
-Value & Count & Frequency \\
-\midrule
-     0 &    12 &       1.2 \\
-     1 &   100 &      10.0 \\
-     2 &   227 &      22.7 \\
-     3 &   303 &      30.3 \\
-     4 &   243 &      24.3 \\
-     5 &   102 &      10.2 \\
-     6 &    13 &       1.3 \\
-\bottomrule
-\end{tabular}
-\end{center}
-\caption{Results of successes from 1,000 6d10 rolls, where scores of 6 or greater are considered successes.}
-\end{table}
+% \begin{figure}[H]
+% \centering
+% \includegraphics[width=3.25in]{6d10_min6.pdf}
+% \caption{Results of succeses from 1,000 6d10 rolls, where scores of 6 or greater are considered successes.}
+% % \label{fig:on}
+% \end{figure}
+
+% \begin{table}[H]
+% \begin{center}
+% \begin{tabular}{*{3}{r}}
+% \toprule
+% Value & Observed & Expected \\
+% \midrule
+%      0 &    12 &  15.6 \\
+%      1 &   100 &  93.7 \\
+%      2 &   227 & 234.3 \\
+%      3 &   303 & 312.5 \\
+%      4 &   243 & 234.3 \\
+%      5 &   102 &  93.7 \\
+%      6 &    13 &  15.6 \\
+% \bottomrule
+% \end{tabular}
+% \end{center}
+% \caption{Results of successes from 1,000 6d10 rolls, where scores of 6 or greater are considered successes. Observed results are compared to expected results from exact probabilities.}
+% \end{table}
 
 \subsection{Same as (c) above except now scores of 1 count as a botch. Each botch is subtracted from each success. If there are more botches than success (i.e., -1 successes) then the overall outcome is a botch. Now depict the frequency of botching, and total number of successes (as before, include the frequency of no successes).}
 
-This final scenario is very similar to the previous one. For our 10 sided die, there is now a $1/10$ probability of a botch, a $2/5$ probability of a failure, and a $1/2$ probability of a success. We can calculate each possible outcome to generate the exact probabilities. The observed dice rolls showed no statistical difference from the exact probability distribution $[\chi^2 (1,N=1000)=3.64, p=0.82]$.
-
+This final scenario is very similar to the previous one. For our 10 sided die, there is now a $1/10$ probability of a botch, a $2/5$ probability of a failure, and a $1/2$ probability of a success. We can calculate each possible outcome to generate the exact probabilities. The observed dice rolls showed no statistical difference from the exact probability distribution $[\chi^2=3.64, p=0.82]$.
+\\
 \begin{lstlisting}
-throw('6d6', n=1000, success_min=6, botching=True, plot=True, stats=True)
+throw('6d10', n=1000, success_min=6, botching=True, plot=True, stats=True)
 \end{lstlisting}
+
 \begin{figure}[H]
-\centering
-\includegraphics[width=3.25in]{6d10_min6_botching.pdf}
-\caption{Results of successes from 1,000 6d10 rolls, where scores of 6 or greater are considered successes, and scores of 1 are considered botches.}
-% \label{fig:on}
+\begin{floatrow}
+\includegraphics[width=4in]{6d10_min6_botching.pdf}
+{%
+  % \caption{A figure}%
+}
+\capbtabbox{%
+  \begin{tabular}{*{3}{r}}
+\toprule
+Value & Observed & Expected \\
+\midrule
+    -1 &    41 &  42.5 \\
+     0 &    77 &  80.9 \\
+     1 &   155 & 156.7 \\
+     2 &   246 & 225.3 \\
+     3 &   223 & 235.0 \\
+     4 &   171 & 168.7 \\
+     5 &    69 &  75.0 \\
+     6 &    18 &  15.6 \\
+\bottomrule
+  \end{tabular}
+}{%
+  % \caption{A table}%
+}
+\end{floatrow}
+\caption{Results of succeses from 1,000 6d10 rolls, where scores of 6 or greater are considered successes, and scores of 1 are considered botches. Observed results are compared to expected results from exact probabilities.}
 \end{figure}
 
-\begin{table}[H]
-\begin{center}
-\begin{tabular}{*{3}{r}}
-\toprule
-Value & Count & Frequency \\
-\midrule
-    -1 &    41 &       4.1 \\
-     0 &    77 &       7.7 \\
-     1 &   155 &      15.5 \\
-     2 &   246 &      24.6 \\
-     3 &   223 &      22.3 \\
-     4 &   171 &      17.1 \\
-     5 &    69 &       6.9 \\
-     6 &    18 &       1.8 \\
-\bottomrule
-\end{tabular}
-\end{center}
-\caption{Results of succeses from 1,000 6d10 rolls, where scores of 6 or greater are considered successes, and scores of 1 are considered botches.}
-\end{table}
+% \begin{figure}[H]
+% \centering
+% \includegraphics[width=3.25in]{6d10_min6_botching.pdf}
+% \caption{Results of successes from 1,000 6d10 rolls, where scores of 6 or greater are considered successes, and scores of 1 are considered botches.}
+% % \label{fig:on}
+% \end{figure}
+
+% \begin{table}[H]
+% \begin{center}
+% \begin{tabular}{*{3}{r}}
+% \toprule
+% Value & Observed & Expected \\
+% \midrule
+%     -1 &    41 &  42.5 \\
+%      0 &    77 &  80.9 \\
+%      1 &   155 & 156.7 \\
+%      2 &   246 & 225.3 \\
+%      3 &   223 & 235.0 \\
+%      4 &   171 & 168.7 \\
+%      5 &    69 &  75.0 \\
+%      6 &    18 &  15.6 \\
+% \bottomrule
+% \end{tabular}
+% \end{center}
+% \caption{Results of succeses from 1,000 6d10 rolls, where scores of 6 or greater are considered successes, and scores of 1 are considered botches. Observed results are compared to expected results from exact probabilities.}
+% \end{table}
+
+\subsection{Fisher's method}
+
+Using Fisher's method, the results of our four independent $\chi^2$ tests can be combined to determine if $H_0$ holds. In Python, this can be quite easily computed by:
+\\
+\begin{lstlisting}
+from scipy.stats import combine_pvalues
+combine_pvalues([.25,.16,.78,.82])
+# (7.3315762457810782, 0.50131680258503031)
+\end{lstlisting}
+We conclude that $H_0$ holds---the simulation outputs are statistically equivalent to what would be found from random choices from their exact probability distributions [$\chi^2=7.33, p=0.50$].
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Summary}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+A Python script was created to allow a user to specify the properties of various dice rolls. These properties include the number of dice per roll, the number of faces on each die (assuming all dice used in a roll have the same number of faces), whether the scores of each die will be summed or will have a minimum value needed to count as a success per die, and whether to include botches or not as an outcome for rolls. Several statistics were calculated to describe the nature of the outcome of 1,000 repetitions of various dice rolls compared to the expected outcome calculated from exact probabilities.
 
+All four $\chi^2$ tests showed that $H_0$, that the psuedorandom outcomes from the simulation scenarios was equivalent to what would be expected from truly random outcomes from the exact probability distributions, holds. Fisher's method was used to combine the p-values from these tests, and also suggests that $H_0$ holds at the .05 level [$\chi^2=7.33, p=0.50$].
 
 \bibliographystyle{IEEEtran}
 %\bibliography{IEEEabr,MyBle}
@@ -287,15 +417,15 @@ Carlisle, Rodney P., ed. Encyclopedia of play in today's society. Vol. 1. Sage, 
 
 \end{thebibliography}
 
-\clearpage
-\onecolumn
+% \clearpage
+% \onecolumn
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \appendix{}               % note there is no {} to put a title. Each appendix has its own title
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % For a single appendix, use the \appendix{} keyword and do not use the \section command.
 
 \section{Source Code}        % first appendix
-\lstinputlisting{"../Option 1 Computation/dice.py"}
+\lstinputlisting[numbers=left]{"../Option 1 Computation/dice.py"}
 % %%%%%%%%%%%%%%%%%%%%%%%%%%
 % This is the first appendix.
 
